2006-04-01  Csaba Henk <csaba.henk@creo.hu>
	* Fix some FreeBSD related macros.

2007-03-30  Miklos Szeredi <miklos@szeredi.hu>

	* Add support for direct mounting by libfuse.  Fall back on
	calling fusermount if it doesn't work

2007-03-14  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.7.0-pre1

2007-03-05  Miklos Szeredi <miklos@szeredi.hu>

	* Correctly handle O_APPEND in direct IO mode.  Reported by Greg
	Bruno

	* mount.fuse should use /bin/bash.  Debian Bug#413403.  Reported
	by Thomas Weinbrenner

2007-02-26  Miklos Szeredi <miklos@szeredi.hu>

	* Fix detection of installed fuse in init script.  Reported and
	fix suggested by Davide Canova

2007-02-05  Miklos Szeredi <miklos@szeredi.hu>

	* Fix 2.6.9 RHEL kernels, which have compatibility mutex.h, but
	don't define mutex_destroy(), bummer.  Patch from Phil Schwan

2007-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* Compile fuseblk for kernels which don't have an option to turn
	off the block layer (CONFIG_BLOCK).  Reported by Szakacsits
	Szabolcs

2007-02-03  Miklos Szeredi <miklos@szeredi.hu>

	* Add filesystem stacking support to high level API.  Filesystem
	modules can be built into libfuse or loaded from shared object
	(.so) files

	* Add 'subdir' and 'iconv' built in modules

	* lib/fuse.c: Fix locking for the reply code in create and open

2007-02-02  Miklos Szeredi <miklos@szeredi.hu>

	* kernel: make it compile on "strange" kernels which have emulated
	mutexes via <linux/mutex.h> but no i_mutex.  Reported by Tomasz
	Mateja

2007-01-28  Miklos Szeredi <miklos@szeredi.hu>

	* kernel: fix BUG in control filesystem if it is umounted and
	mounted again, while some fuse filesystems are present.
	Bugreport from Florent Mertens

	* kernel: sync with mainline, support 2.6.20

2007-01-22  Miklos Szeredi <miklos@szeredi.hu>

	* lib/Makefile.am: actually link libfuse against libfuse_libs

2007-01-19  Miklos Szeredi <miklos@szeredi.hu>

	* Build fix for 2.6.16 vanila and 2.6.15 FC5 kernels.  Patch from